--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-Flask == 0.12.3
+Flask==0.12
+Flask-Migrate==2.0.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
 requests == 2.19.1
+dulwich --global-option=--pure
