--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ secrets.yaml
 testing.py
 /kaknas/__pycache__
 /kaknas/utils/__pycache__
+/kaknas/controller/__pycache__
+/kaknas/database/__pycache__
