--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Flask==0.12.3
 Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
-requests == 2.19.1
+Flask-Caching==1.4.0
+requests==2.19.1
 dulwich --global-option=--pure
