Edit git command to retrieve hash

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ Flask-SQLAlchemy==2.1
 Flask-Caching==1.4.0
 requests==2.19.1
 dulwich --global-option=--pure
+apscheduler==3.5.3
 Flask-APScheduler==1.6.0
