--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,12 @@ testing.py
 /kaknas/utils/__pycache__
 /kaknas/controller/__pycache__
 /kaknas/cache/__pycache__
+/kaknas-vue/dist
+kaknas/kaknas-vue-full.js
+kaknas/kaknas-vue.css
+kaknas/kaknas-vue.js
+kaknas/stats.json
+kaknas/vuetable-2-full.js
+kaknas/vuetable-2.js
 *.pem
 /repos
